--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <html>
 	<head>
-		<title>About me
-		</title>
+		<title>About Me</title>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-	<p>
-	<h1>RICHARD</h1>
-	</p>
-	<p>I am <b>Richard C Kunnath</b>.I am a student pursuing Computer Science Engineering at Reva University.I am doing my second sem right now.To know more about me.... contact me.My hobbies include singing, texting random strangers, flashing different custom ROMs to any phone I keep my hand on and spoil that phone, blah blah blah.
-I am awesome and everyone knows that:) Ping me everyone who try to read this....  
-	</p>
+		<center><h1>Hey guys!!!It's <b>ME</b></h1></center>
+		<p><h2><center class=zappy yoo>Yeah...That me is Richard<img src="cool.jpeg" width="50px" height="50px"></img></center></h2>
+		<h3>The following are the information and details about my hobbies<img src="P.jpeg" width="50px" height="50px"></p>
+		<ol>
+			<li>Singing and spamming chats on WhatsApp (PS: I don't listen to them)</li>
+			<li>Texting strangers</li>
+			<li>Listening to songs</li>
+			<li>Dancing</li>
+			<li>Scrolling through different tools in SDK manager</li>
+			<li>Screwing up phones by flashing new custom ROMs</li>
+			<li>Passionate about Android development</li>
+		</ol>
+		and Blah... Blah... Blah...
+		<marquee><h1>I am <b>RICHARD-The Zeus Of All World</b></h1></marquee> 
+		To know more:
+		<ul>
+			<li>Visit my Facebook page:<a href="https://www.facebook.com/richard.ckunnath.3" target="_blank"><img src="fb.jpeg" width="150px" height="50px"></img></a></li>
+			<li>You can email me at: <a href="mailto:richardckunnath1998@gmail.com" target="https://accounts.google.com/">richardckunnath1998@gmail.com</a></li>
+			<li><p>Enter your Queries here:<br><textarea rows="30" cols="50">Enter your text here...</textarea><br><input type="submit"></p></li>
+		</ul></h3>
 	</body>
 </html>
